[package]
name = "svg2sixel"
version = "0.1.2"
edition = "2021"
description = "Render a SVG as sixel for display in terminal"
keywords = ["sixel", "svg"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/gulrotkake/svg2sixel"
repository = "https://github.com/gulrotkake/svg2sixel"

[lib]
name = "svg2sixel"
path = "src/lib.rs"

[[bin]]
name = "svg2sixel"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
clap-stdin = "0.4.0"
kitty_image = "0.1.0"
resvg = "0.42.0"
sixel-bytes = "0.2.3"
usvg = "0.42.0"

